Fixing FOUC and layout shift on search filters, closes #179

--- a/web/wp-content/themes/lf-theme/source/scss/components/_searchandfilter.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_searchandfilter.scss
@@ -1,5 +1,10 @@
 .searchandfilter {
+    @media (min-width: 1000px) {
+        height: 60px;
+    }
+
     >ul {
+        height: 100%;
         margin: 0; // reset
         display: flex;
         flex-wrap: wrap;
@@ -26,7 +31,14 @@
     }
 
     select.sf-input-select {
+        // display: none;
+        //
         min-width: 150px;
+
+    }
+
+    .sf-input-select {
+        visibility: hidden;
     }
 
     .chosen-container {
